Attempts to fix print table right aligned

--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -23,7 +23,7 @@
 		border-collapse: collapse;
 		border: 1px solid black;
 		width: 100%;
-		text-align: right;
+		// text-align: right;
 	}
 	a[href]:after{content:none}
 }
@@ -31,5 +31,5 @@
 .noPrinting {
 	@media print {
 		display: none;
-	} 
+	}
 }
